# -*- coding: utf-8 -*-

# @Time    : 25/05/2024
# @Author  : Tom Wießner
# @Software: Panorama Cam

[metadata]
name = panorama_cam
version = 1.0.0
author = Tom Wießner
description = Black Mountain Bikepark Panorama Camera
long_description = Black Mountain Bikepark Panorama Camera
keywords = panorama_cam

[options]
include_package_data = True
python_requires = >=3.8, <4
install_requires =
    opencv-python

[options.extras_require]
tests =
    pytest==7.2.0
    pytest-html==3.2.0
    pytest-cov==4.0.0
    assertpy==1.1
    pytest-mock==3.10.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    panorama_cam = panorama_cam.main:main
